General: Pkg name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vscode-pos",
+    "name": "vscode-plaformos",
     "displayName": "PlatformOS",
     "description": "PlatformOS Syntax Highlighter and snippets for Visual Studio Code.",
     "version": "0.0.1",
